--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node demo01/add.test.js.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "testing",
@@ -16,10 +16,11 @@
     "babel-core": "~6.2.1",
     "babel-preset-es2015": "~6.1.18",
     "chai": "~3.4.1",
-    "mocha": "~2.3.4",
-    "mochawesome": "~1.2.1"
+    "mocha": "^2.3.4",
+    "mochawesome": "^1.5.5"
   },
   "dependencies": {
+    "expect": "^23.1.0",
     "node-fetch": "~1.3.3",
     "superagent": "~1.4.0"
   }
